<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appicon_background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_error_bus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/error_csv"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_do_send"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/do_send"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_donot_send"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/donot_send" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/button_open_preference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setting" />
    </LinearLayout>
</ScrollView>

